<resources>
    <string name="app_name">File Tracker</string>
    <string name="add_tracker">Трекер</string>
    <string name="delete_tracker">Удалить трекер</string>
    <string name="destination">Destination</string>
    <string name="source">Source</string>
    <string name="delete">Delete</string>
    <string name="minimize">Hide</string>
    <string name="start_service">Start</string>
    <string name="start_ser">Запустить сервис</string>
    <string name="stop_service">Stop</string>
    <string name="tracker_active">Active</string>
    <string name="tracker_paused">Paused</string>
    <string name="toggle_tracker_active">Статус</string>
    <string name="notify_show">Show</string>
    <string name="show_log">Log</string>
    <string name="event_log_back">Назад</string>
    <string name="notification_access">Дать доступ к уведомлениям</string>
    <string name="choose_output_dir">Выбрать выходную папку</string>
    <string name="output_dir_text">Output dir: не выбрано</string>
    <string name="app_name_text">App Name: не выбрано</string>
    <string name="hide_app">Свернуть</string>
    <string name="stop_service_app">Остановить сервис</string>
    <string name="choose_app_folder">Выбрать папку приложения</string>
    <string name="eventlog_total_count_text">Всего: 0</string>
    <string name="last_items_text">Последние:</string>
    <string name="filter_notifications">Notify</string>
    <string name="filter_system">System</string>
    <string name="filter_extended">Extra logs</string>
    <string-array name="log_limit_options">
        <item>25</item>
        <item>50</item>
        <item>100</item>
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>1000</item>
    </string-array>
</resources>